@@ -8,6 +8,7 @@ export(find_duplicate_quotes)
 export(quote_cloud)
 export(quote_topics)
 export(search_quotes)
+export(search_text)
 export(statquote)
 importFrom(stats,na.omit)
 importFrom(stringr,str_detect)
